--- a/inpaint.yml
+++ b/inpaint.yml
@@ -4,7 +4,7 @@ num_gpus_per_job: 1  # number of gpus each job need
 num_cpus_per_job: 4  # number of gpus each job need
 num_hosts_per_job: 1
 memory_per_job: 32  # number of gpus each job need
-gpu_type: 'nvidia-tesla-p100'
+gpu_type: 'nvidia-tesla-k40c'
 
 # parameters
 name: places2_gated_conv_v100  # any name
@@ -56,7 +56,7 @@ height: 128
 width: 128
 max_delta_height: 32
 max_delta_width: 32
-batch_size: 16
+batch_size: 2
 vertical_margin: 0
 horizontal_margin: 0
 
