fixed tf version

--- a/inpaint.yml
+++ b/inpaint.yml
@@ -1,15 +1,15 @@
 # =========================== Basic Settings ===========================
 # machine info
-num_gpus_per_job: 1  # number of gpus each job need
-num_cpus_per_job: 4  # number of gpus each job need
-num_hosts_per_job: 1
-memory_per_job: 32  # number of gpus each job need
+num_gpus_per_job: 2  # number of gpus each job needs
+num_cpus_per_job: 4  # number of cpus each job needs
+num_hosts_per_job: 2
+memory_per_job: 32  # number of gpus each job needs
 gpu_type: 'nvidia-tesla-k40c'
 
 # parameters
 name: places2_gated_conv_v100  # any name
-model_restore: ''  # logs/places2_gated_conv
-dataset: 'celebahq'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
+model_restore: 'logs/celeba_author'  # pretrainded model 
+dataset: 'celeba'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
 random_crop: False  # Set to false when dataset is 'celebahq', meaning only resize the images to img_shapes, instead of crop img_shapes from a larger raw image. This is useful when you train on images with different resolutions like places2. In these cases, please set random_crop to true.
 val: False  # true if you want to view validation results in tensorboard
 log_dir: logs/full_model_celeba_hq_256
@@ -31,23 +31,23 @@ val_psteps: 2000
 data_flist:
   # https://github.com/jiahuiyu/progressive_growing_of_gans_tf
   celebahq: [
-    '/home/skayasth/2022/Sept/GCNN_UH/data_flist/train_shuffled.flist',
-    '/home/skayasth/2022/Sept/GCNN_UH/data_flist/validation_shuffled.flist'
+    '/home/skayasth/2022/Sept/GCNN_UH/data/train_shuffled.flist',
+    '/home/skayasth/2022/Sept/GCNN_UH/data/validation_shuffled.flist'
   ]
   # http://mmlab.ie.cuhk.edu.hk/projects/celeba.html, please to use random_crop: True
   celeba: [
-    '/home/skayasth/2022/Sept/GCNN_UH/data_flist/train_shuffled.flist',
-    '/home/skayasth/2022/Sept/GCNN_UH/data_flist/validation_shuffled.flist'
+    '/home/skayasth/2022/Sept/GCNN_UH/data/train_shuffled.flist',
+    '/home/skayasth/2022/Sept/GCNN_UH/data/validation_shuffled.flist'
   ]
   # http://places2.csail.mit.edu/, please download the high-resolution dataset and use random_crop: True
   places2: [
     'data/places2/train_shuffled.flist',
     'data/places2/validation_static_view.flist'
   ]
-  # http://www.image-net.org/, please use random_crop: True
-  imagenet: [
-    'data/imagenet/train_shuffled.flist',
-    'data/imagenet/validation_static_view.flist',
+  # for our data
+  uh: [
+    'data/places2/train_shuffled.flist',
+    'data/places2/validation_static_view.flist'
   ]
 
 static_view_size: 30
@@ -56,7 +56,7 @@ height: 128
 width: 128
 max_delta_height: 32
 max_delta_width: 32
-batch_size: 2
+batch_size: 8
 vertical_margin: 0
 horizontal_margin: 0
 
